@@ -3,7 +3,11 @@ from .info import *
 
 def run():
     import logging
-    from .tools import clargs, cleanup, errors
+    from .tools import clargs, cleanup, errors, REPLACEMENTS
+
+    if clargs.use_dashes:
+        slash_index = next(i for i, v in enumerate(REPLACEMENTS) if v[0] == "/")
+        REPLACEMENTS[slash_index] = ("/", "-")
 
     if clargs.folder_mode:
         from .sort_folders import sort
